--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,6 +1,6 @@
 
 // Load CSS Reset from NPM
-// @import '../../node_modules/reset-css/reset.css';
+@import '../node_modules/reset-css/reset.css';
 @import 'variables';
 @import 'mixins';
 
