--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -7,7 +7,7 @@
     <meta name="description" content="{{ description or metadata.description }}">
     <link rel="stylesheet" href="{{ '/css/index.css' | url }}">
 
-    <script src="{{ '/js/scripts.js' | url }}"></script>
+    <script type="module" src="{{ '/js/scripts.js' | url }}"></script>
     <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
     <link rel="alternate" href="{{ metadata.jsonfeed.path | url }}" type="application/json" title="{{ metadata.title }}">
   </head>
