--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,13 +1,13 @@
 
 // Load CSS Reset from NPM
 @import '../node_modules/reset-css/reset.css';
-@import 'variables';
-@import 'mixins';
+@import 'styles/variables';
+@import 'styles/mixins';
 
 @include font-face ('700', '700');
 
 * {
-  cursor: url('../images/buchlaArrow.svg') 35 35, auto !important;
+  cursor: url('/assets/icons/buchlaArrow.svg') 35 35, auto !important;
   user-select: none;
 }
 
@@ -58,14 +58,14 @@ p {
   border-image-outset: 0;
   border-image-repeat: stretch;
   border-image-slice: 5;
-  border-image-source: url('../images/borderOuter.svg');
+  border-image-source: url('/assets/images/borderOuter.svg');
   border-image-width: 12px;
 }
 
 .borderInner {
   border: 1px solid #3c3d76;
   border-image-slice: 5;
-  border-image-source: url('../images/borderOuter.svg');
+  border-image-source: url('/assets/images/borderOuter.svg');
   border-image-width: 12px;
   padding: 10px;
 }
