--- a/src/index.njk
+++ b/src/index.njk
@@ -1,5 +1,9 @@
 ---
 layout: layouts/home.njk
+mouseFollowerData:
+    - Welcome to the page of the Buchla 700 emulator.
+    - It mimics the operating system of the 700.
+    - This is the main menu. Click on one of items to get more info.
 contact: 
     label: Are you interested in contributing?
     link: 
