--- a/assets/styles/_mixins.scss
+++ b/assets/styles/_mixins.scss
@@ -21,6 +21,10 @@
   }
 }
 
+@function get-color($color) {
+  @return map-get($colors, $color);
+}
+
 @mixin center(
   $max-width: $container-max-width,
   $padding: $container-padding-desktop
