--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -1,1 +1,13 @@
-$heading-selectors: 'h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6';
+$heading-selectors: "h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6";
+
+$colors: (
+    turquoise: #6a9d9c,
+    black: #000000,
+    blue-midnight: #3c3d76,
+    rosewood: #550000,
+    brown-rust: #7f400c,
+    green-olive: #555000,
+    green-sea: #005555,
+    orange: #aa5500,
+    orange-peach: #a38e80,
+);
