Style Instrument Designer.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,6 +3,7 @@
 @import "styles/variables";
 @import "styles/mixins";
 @import "styles/librarian";
+@import "styles/instrumentDesigner";
 @import "styles/colorPalette";
 
 @include font-face("700", "700");
