--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -4,10 +4,12 @@ $colors: (
     turquoise: #6a9d9c,
     black: #000000,
     blue-midnight: #3c3d76,
+    blue-dark: #000056,
     rosewood: #550000,
     brown-rust: #7f400c,
     green-olive: #555000,
     green-sea: #005555,
     orange: #aa5500,
     orange-peach: #a38e80,
+    crimson: #560055
 );
