Add basic draw on canvas.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -13,6 +13,11 @@
   user-select: none;
 }
 
+.functionPath {
+  color: get-color(green-vibrant);
+  color: green;
+}
+
 body {
   background: get-color(black);
   color: get-color(turquoise);
