--- a/src/color-palette/index.njk
+++ b/src/color-palette/index.njk
@@ -1,9 +1,9 @@
 ---
 layout: layouts/base.njk
-title: Downloads
+title: Color Palette
 templateClass: tmpl-base
 eleventyNavigation:
-  key: Downloads
+  key: Color Palette
   order: 3
 ---
 
