--- a/src/instrument-designer/index.njk
+++ b/src/instrument-designer/index.njk
@@ -30,6 +30,7 @@ tabs:
   {% set labels = tabs.labels2 %}
   {% set color = 'crimson' %}
   {% include "./_partials/tabs.njk" %}
-  <div class=""></div>
+  <div class="">
+    <canvas class="canvas" width="1080" height="680"/></div>
   <div class=""></div>
 </div>
