--- a/assets/styles/instrumentDesigner.scss
+++ b/assets/styles/instrumentDesigner.scss
@@ -21,4 +21,11 @@
             }
         }
     }
+
+    .canvas {
+        width: 100%;
+        height: 680px;
+        background-color: get-color(green-sea);
+
+    }
 }
