Add BuchlaFPU object.

--- a/src/instrument-designer/index.njk
+++ b/src/instrument-designer/index.njk
@@ -22,6 +22,11 @@ tabs:
     - Ind 4
     - Ind 5
     - Ind 6
+
+mouseFollowerData:
+    - Welcome to the page of the Buchla 700 emulator.
+    - It mimics the operating system of the 700.
+    - This is the main menu. Click on one of items to get more info.
 ---
 <div class="center instrument-designer">
   {% set labels = tabs.labels %}
