Update paths for gh-pages.

--- a/assets/styles/_mixins.scss
+++ b/assets/styles/_mixins.scss
@@ -5,7 +5,7 @@
   $weight: 'normal',
   $style: 'normal',
   $woff2: false,
-  $base-path: '/assets/fonts/'
+  $base-path: 'assets/fonts/'
 ) {
   @font-face {
     font-family: $family;
