--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -12,5 +12,6 @@ $colors: (
     green-olive: #555000,
     green-vibrant: #09D323,
     turquoise: #6a9d9c,
+    turquoise-light: #7ED2D2,
     green-sea: #005555,
     );
