--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -6,18 +6,17 @@
     <title>{{ title or metadata.title }}</title>
     <meta name="description" content="{{ description or metadata.description }}">
     <link rel="stylesheet" href="{{ '/main.css' | url }}">
-
     <script type="module" src="{{ '/main.js' | url }}"></script>
     <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
     <link rel="alternate" href="{{ metadata.jsonfeed.path | url }}" type="application/json" title="{{ metadata.title }}">
   </head>
   <body>
-    <script class="mouseFollowerJson" type="application/json">{{ mouseFollowerData | dump | safe  }}</script>
+    <script class="mouseFollowerJson" type="application/json">
+      {{ mouseFollowerData | dump | safe  }}
+    </script>
     <main{% if templateClass %} class="{{ templateClass }}"{% endif %}>
       {{ content | safe }}
     </main>
-
-
 
     <!-- Current page: {{ page.url | url }} -->
   </body>
