Add fm config graphics

--- a/assets/styles/instrumentDesigner.scss
+++ b/assets/styles/instrumentDesigner.scss
@@ -41,6 +41,13 @@
     background-color: get-color(green-sea);
   }
 
+  .canvasConfig {
+    display: block;
+    width: 260px;
+    height: 220px;
+    background-color: get-color(green-sea);
+  }
+
   .border {
     border: 3px solid get-color(blue-midnight);
 
