--- a/src/instrument-designer/index.njk
+++ b/src/instrument-designer/index.njk
@@ -44,4 +44,8 @@ mouseFollowerData:
   <div class="canvasWrapper border">
     <canvas class="canvas" width="1080" height="680"/>
   </div>
+
+  <div class="canvasConfigWrapper border">
+    <canvas class="canvasConfig" width="260" height="220"/>
+  </div>
 </div>
