Move scss into src

--- a/src/instrument-designer/_style.scss
+++ b/src/instrument-designer/_style.scss
@@ -45,7 +45,7 @@
     display: block;
     width: 260px;
     height: 220px;
-    background-color: get-color(green-sea);
+    background-color: get-color(blue-dark);
   }
 
   .border {
