--- a/src/instrument-designer/_style.scss
+++ b/src/instrument-designer/_style.scss
@@ -1,51 +1,9 @@
 .instrument-designer {
-  .tabs {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-
-    &-tab {
-      flex: 1 1 16.6667%;
-      text-align: right;
-      border-right: 3px solid get-color(blue-midnight);
-      border-top: 3px solid get-color(blue-midnight);
-      height: 60px;
-      padding: 0 15px;
-      width: 16.6667%;
-
-      &--blue-dark {
-        background: get-color(blue-dark);
-      }
-      &--crimson {
-        background: get-color(crimson);
-      }
-
-      &[data-key="Level"] {
-        color: get-color(turquoise-light);
-        background: get-color(green-sea);
-      }
-
-      &:nth-child(6n) {
-        border-right: 0;
-      }
-      &:nth-child(-n+6) {
-        border-top: 0;
-      }
-    }
-  }
-
   .canvas {
     display: block;
     width: 100%;
     height: 680px;
     background-color: get-color(green-sea);
-  }
-
-  .canvasConfig {
-    display: block;
-    width: 260px;
-    height: 220px;
-    background-color: get-color(blue-dark);
   }
 
   .border {
@@ -55,4 +13,7 @@
       border-top: 0;
     }
   }
+
+  @import "Tabs/style";
+  @import "FMConfig/style";
 }
