--- a/src/instrument-designer/_style.scss
+++ b/src/instrument-designer/_style.scss
@@ -1,11 +1,4 @@
 .instrument-designer {
-  .canvas {
-    display: block;
-    width: 100%;
-    height: 680px;
-    background-color: get-color(green-sea);
-  }
-
   .border {
     border: 3px solid get-color(blue-midnight);
 
@@ -14,6 +7,7 @@
     }
   }
 
+  @import "EditedFunction/style";
   @import "Tabs/style";
   @import "FMConfig/style";
 }
