--- a/src/instrument-designer/index.njk
+++ b/src/instrument-designer/index.njk
@@ -38,11 +38,9 @@ mouseFollowerData:
     - This is the main menu. Click on one of items to get more info.
 ---
 <div class="center instrument-designer">
-  {% include "./_partials/Tabs.njk" %}
+  {% include "./Tabs/index.njk" %}
 
-  <div class="canvasWrapper border">
-    <canvas class="canvas" width="1080" height="680"/>
-  </div>
+  {% include "./EditedFunction/index.njk" %}
 
   {% include "./FMConfig/index.njk" %}
 </div>
